--- a/index.html
+++ b/index.html
@@ -9,43 +9,58 @@
     <title>Tic-Tac-Toe</title>
 </head>
 
+<style>
+    body {
+        /* background-image: url(assets/winnie_the_pooh-08_Featured.webp) */
+    }
+</style>
+
 <body>
-    <header>TIC TAC TOE BATTLE ROYAL</header>
+    <header class="tic-tac-toe-title" id="ticTacToeTitle">
+        <h1>TIC TAC TOE BATTLE ROYAL</h1>
+        <p class="winner hidden" id="winner"></p>
+        <p class="t-t-t-current-player hidden" id="TTTCurrentPlayer">PLAYER 1</p>
+    </header>
     <main>
         <section class="banner-wrapper">
             <article class="player-1-side-banner">
                 <div class="player-1-title">Player one</div>
-                <div class="play-1-token" id="player1Token">Token</div>
-                <div class="player-1-wins">Wins: 
+                <div class="player-token" id="player1Token">
+                    <img src="" >
+                </div>
+                <div class="player-1-wins">Wins:
                     <p class="player-1-win-count" id="player1WinCount">0</p>
                 </div>
             </article>
             <section class="board-game-layout-container">
                 <section class="tic-tac-toe-grid">
-                    <div class="grid-item" id="gridItem0">0</div>
-                    <div class="grid-item" id="gridItem1">1</div>
-                    <div class="grid-item" id="gridItem2">2</div>
-                    <div class="grid-item" id="gridItem3">3</div>
-                    <div class="grid-item" id="gridItem4">4</div>
-                    <div class="grid-item" id="gridItem5">5</div>
-                    <div class="grid-item" id="gridItem6">6</div>
-                    <div class="grid-item" id="gridItem7">7</div>
-                    <div class="grid-item" id="gridItem8">8</div>
+                    <div class="grid-item" id="gridItem0" src=""></div>
+                    <div class="grid-item" id="gridItem1"></div>
+                    <div class="grid-item" id="gridItem2"></div>
+                    <div class="grid-item" id="gridItem3"></div>
+                    <div class="grid-item" id="gridItem4"></div>
+                    <div class="grid-item" id="gridItem5"></div>
+                    <div class="grid-item" id="gridItem6"></div>
+                    <div class="grid-item" id="gridItem7"></div>
+                    <div class="grid-item" id="gridItem8"></div>
                 </section>
             </section>
-                <article class="player-2-side-banner">
-                    <div class="player-2-title">Player Two</div>
-                    <div class="play-2-token" id="player2Token">Token</div>
-                    <div class="player-2-wins">Wins: 
-                        <p class="player-2-win-count" id="player2WinCount">0</p>
-                    </div>
-                </article>
+            <article class="player-2-side-banner">
+                <div class="player-2-title">Player Two</div>
+                <div class="player-token" id="player2Token">
+                    <img width="100" src="./assets/hunnypotcopy.png" alt="Hunny pot" class="hunny-pot">
+                </div>
+                <div class="player-2-wins">Wins:
+                    <p class="player-2-win-count" id="player2WinCount">0</p>
+                </div>
+            </article>
         </section>
+        <button class="new-game-button" id="newGameButton">NEW GAME</button>
     </main>
 
-    <script src="src/main.js"></script>
     <script src="src/game.js"></script>
     <script src="src/player.js"></script>
+    <script src="src/main.js"></script>
 </body>
 
 </html>
