--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <header class="tic-tac-toe-title hidden" id="ticTacToeTitle">
         <h1>TIC TAC TOE</h1>
         <h4>In the Hundred Acre Wood</h4>
-        <p class="winner hidden" id="winner"></p>
-        <p class="t-t-t-current-player" id="TTTCurrentPlayer">PLAYER 1</p> 
+        <p class="player-banner" id="playerBanner">PLAYER 1</p> 
     </header>
     <main>
         <section class="welcome-page" id="welcomePage">
@@ -26,7 +25,7 @@
             <article class="player-1-side-banner">
                 <div class="player-1-title">Player one</div>
                 <div class="player-token" >
-                    <img height="100" width="75" id="player1Token" src="assets/redballoon.png" alt="Hunny pot" class="hunny-pot">
+                    <img height="100" id="player1Token" src="assets/redballoon.png" alt="Hunny pot" class="hunny-pot">
                 </div>
                 <div class="player-1-wins">Wins:
                     <p class="player-1-win-count" id="player1WinCount">0</p>
@@ -66,7 +65,7 @@
             <article class="player-2-side-banner">
                 <div class="player-2-title">Player Two</div>
                 <div class="player-token" >
-                    <img id="player2Token" height="100" width="90" src="assets/hunnypotcopy.png" alt="Hunny pot" class="hunny-pot">
+                    <img id="player2Token" height="100" src="assets/hunnypotcopy.png" alt="Hunny pot" class="hunny-pot">
                 </div>
                 <div class="player-2-wins">Wins:
                     <p class="player-2-win-count" id="player2WinCount">0</p>
